--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -11,6 +11,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
+            <h2>Cuestionario aleatorio</h2>
             <!-- Formulario del cuestionario -->
             <form id="quiz-form">
                 {% for pregunta in preguntas %}
