--- a/app/templates/quiz.html
+++ b/app/templates/quiz.html
@@ -12,6 +12,7 @@
     <div class="row">
         <div class="col-md-8">
             <h2>Cuestionario aleatorio</h2>
+            <p>&nbsp;</p>
             <!-- Formulario del cuestionario -->
             <form id="quiz-form">
                 {% for pregunta in preguntas %}
